Fix SSG logo size on mobile

--- a/client/src/components/SuggestionForm/SuggestionForm.scss
+++ b/client/src/components/SuggestionForm/SuggestionForm.scss
@@ -1603,6 +1603,12 @@
       height: 50px;
     }
     
+    .ssg-logo {
+      width: 130%;
+      height: 130%;
+      margin: -15%;
+    }
+    
     .header-text {
       h1 {
         font-size: $text-lg;
@@ -1844,6 +1850,12 @@
     .logo-wrapper {
       width: 40px;
       height: 40px;
+    }
+    
+    .ssg-logo {
+      width: 140%;
+      height: 140%;
+      margin: -20%;
     }
     
     .header-text {
